--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ section {
 #page-title {
   padding-top: 20px 0;
   text-align: center;
-  color: #e7b22c;
+  color: #1192e7;
   font-size: 60px;
 }
 
@@ -71,7 +71,7 @@ section {
   width: 200px;
   height: 400px;
   border: solid 2px white;
-  background-color: #333333;
+  background-color: #141414;
   border-radius: 20px;
   color: white;
   justify-content: space-between;
